- Fluid Basic Hopper completed, now for real this time!!: recipes & language

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -8,3 +8,4 @@ item.upgcraft:DragonSword.name=Dragon Sword
 #Bloks
 tile.upgcraft:WoodenTank.name=Wooden Tank
 tile.upgcraft:SlimyLog.name=Slimy Log
+tile.upgcraft:BasicFluidHopper.name=Basic Fluid Hopper
