--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -4,6 +4,7 @@ itemGroup.UpgradeCraft=UpgradeCraft
 #Items
 item.upgcraft:ConcentratedEnderPearl.name=Concentrated Ender Pearl
 item.upgcraft:DragonSword.name=Dragon Sword
+item.upgcraft:ClayIronIngot.name=Clay Iron Ingot
 
 #Bloks
 tile.upgcraft:WoodenTank.name=Wooden Tank
