--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -10,7 +10,9 @@ item.upgcraft:ClayIronIngot.name=Clay Iron Ingot
 tile.upgcraft:WoodenTank.name=Wooden Tank
 tile.upgcraft:ClayTank.name=Clay Tank
 tile.upgcraft:ClayTank.Hardened.name=Hardened Clay Tank
+tile.upgcraft:EnderTank.name=Ender Tank
 tile.upgcraft:SlimyLog.name=Slimy Wood Planks
+tile.upgcraft:SlimyObsidian.name=Slimy Obsidian
 tile.upgcraft:BasicFluidHopper.name=Basic Fluid Hopper
 tile.upgcraft:FluidFurnace.name=Fluid Furnace
 tile.upgcraft:FluidInfuser.name=Fluid Infuser
