Progress on "Personal Information"

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -5,6 +5,7 @@ itemGroup.UpgradeCraft=UpgradeCraft
 item.upgcraft:ConcentratedEnderPearl.name=Concentrated Ender Pearl
 item.upgcraft:DragonSword.name=Dragon Sword
 item.upgcraft:ClayIronIngot.name=Clay Iron Ingot
+item.upgcraft:PersonalInformation.name=Personal Information
 
 #Bloks
 tile.upgcraft:WoodenTank.name=Wooden Tank
