More working on Ender Hopper:  - add GUI  - Generate a method for transferring items  Used generalized method

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -26,3 +26,4 @@ tooltip.upgcraft:tank.tobecooked.b=hotter than a regular furnace...
 #Inventory
 upgcraft:container.fluidfurnace=Fluid Furnace
 upgcraft:container.fluidinfuser=Fluid Infuser
+upgcraft:container.enderhopper=Ender Hopper
