--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -12,6 +12,7 @@ tile.upgcraft:WoodenTank.name=Wooden Tank
 tile.upgcraft:ClayTank.name=Clay Tank
 tile.upgcraft:ClayTank.Hardened.name=Hardened Clay Tank
 tile.upgcraft:EnderTank.name=Ender Tank
+tile.upgcraft:EnderHopper.name=Ender Hopper
 tile.upgcraft:SlimyLog.name=Slimy Wood Planks
 tile.upgcraft:SlimyObsidian.name=Slimy Obsidian
 tile.upgcraft:BasicFluidHopper.name=Basic Fluid Hopper
