- big fix...  - little change in the item to block, block to item behavior for clay tank

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -23,6 +23,9 @@ tile.upgcraft:FluidInfuser.name=Fluid Infuser
 tooltip.upgcraft:tank.hollow=Transparent
 tooltip.upgcraft:tank.tobecooked.t=This should be cooked into something
 tooltip.upgcraft:tank.tobecooked.b=hotter than a regular furnace...
+tooltip.upgcraft:tank.fluiddfname=Empty
+tooltip.upgcraft:tank.fluidname=Fluid Name
+tooltip.upgcraft:tank.fluidamount=Fluid Amount
 
 #Inventory
 upgcraft:container.fluidfurnace=Fluid Furnace
