Fluid Furnace recipes registered in NEI

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -34,3 +34,4 @@ upgcraft:container.enderhopper=Ender Hopper
 
 #NEI
 gui.nei.upgcraft:FluidInfuser=Fluid Infuser
+gui.nei.upgcraft:FluidFurnace=Fluid Furnace
