--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -9,6 +9,7 @@ item.upgcraft:ConcentratedEnderPearl.name=Concentrated Ender Pearl
 item.upgcraft:DragonSword.name=Dragon Sword
 item.upgcraft:ClayIronIngot.name=Clay Iron Ingot
 item.upgcraft:PersonalInformation.name=Personal Information
+item.upgcraft:ActiveLavaBucket.name=Active Lava Bucket
 
 #Bloks
 tile.upgcraft:WoodenTank.name=Wooden Tank
