--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -23,6 +23,7 @@ tile.upgcraft:BasicFluidHopper.name=Basic Fluid Hopper
 tile.upgcraft:FluidFurnace.name=Fluid Furnace
 tile.upgcraft:FluidInfuser.name=Fluid Infuser
 tile.upgcraft:ActiveLava.name=Active Lava
+tile.upgcraft:TermoFluidFurnace.name=Termo Fluid Furnace
 
 #Tooltip
 tooltip.upgcraft:tank.hollow=Transparent
@@ -31,11 +32,13 @@ tooltip.upgcraft:tank.tobecooked.b=hotter than a regular furnace...
 tooltip.upgcraft:tank.fluiddfname=Empty
 tooltip.upgcraft:tank.fluidname=Fluid
 tooltip.upgcraft:tank.fluidamount=Amount
+tooltip.upgcraft:machine.temperature=Temperature
 
 #Inventory
 upgcraft:container.fluidfurnace=Fluid Furnace
 upgcraft:container.fluidinfuser=Fluid Infuser
 upgcraft:container.enderhopper=Ender Hopper
+upgcraft:container.termofurnace=Termo Fluid Furnace
 
 #NEI
 gui.nei.upgcraft:FluidInfuser=Fluid Infuser
