--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -14,6 +14,7 @@ item.upgcraft:ActiveLavaBucket.name=Active Lava Bucket
 #Bloks
 tile.upgcraft:WoodenTank.name=Wooden Tank
 tile.upgcraft:ClayTank.name=Clay Tank
+tile.upgcraft:IronTank.name=Iron Tank
 tile.upgcraft:ClayTank.Hardened.name=Hardened Clay Tank
 tile.upgcraft:EnderTank.name=Ender Tank
 tile.upgcraft:EnderHopper.name=Ender Hopper
