Mark WIP block as WIP block!

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -17,7 +17,7 @@ tile.upgcraft:ClayTank.name=Clay Tank
 tile.upgcraft:IronTank.name=Iron Tank
 tile.upgcraft:ClayTank.Hardened.name=Hardened Clay Tank
 tile.upgcraft:EnderTank.name=Ender Tank
-tile.upgcraft:EnderHopper.name=Ender Hopper
+tile.upgcraft:EnderHopper.name=Ender Hopper [WIP]
 tile.upgcraft:SlimyLog.name=Slimy Wood Planks
 tile.upgcraft:SlimyObsidian.name=Slimy Obsidian
 tile.upgcraft:BasicFluidHopper.name=Basic Fluid Hopper
