--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -36,8 +36,8 @@ tooltip.upgcraft:fluid.hopper.burned=Burned
 tooltip.upgcraft:tank.tobecooked.t=This should be cooked into something
 tooltip.upgcraft:tank.tobecooked.b=hotter than a regular furnace...
 tooltip.upgcraft:tank.fluiddfname=Empty
-tooltip.upgcraft:tank.fluidname=Fluid
-tooltip.upgcraft:tank.fluidamount=Amount
+tooltip.upgcraft:tank.fluid.name=Fluid
+tooltip.upgcraft:tank.fluid.amount=Amount
 tooltip.upgcraft:machine.temperature=Temperature
 tooltip.upgcraft:fluidtankmold.iron=Iron
 tooltip.upgcraft:fluidtankmold.content=Content
