--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -25,7 +25,7 @@ tile.upgcraft:FluidFurnace.name=Fluid Furnace
 tile.upgcraft:FluidInfuser.name=Fluid Infuser
 tile.upgcraft:ActiveLava.name=Active Lava
 tile.upgcraft:TermoFluidFurnace.name=Termo Fluid Furnace
-tile.upgcraft:ActiveMaker.name=Active Maker
+tile.upgcraft:ActiveLavaMaker.name=Active Lava Maker
 tile.upgcraft:FluidTankMold.name=Fluid Tank Mold
 tile.upgcraft:FluidTankMold.Hardened.name=Hardened Fluid Tank Mold
 tile.upgcraft:FluidHopper.name=Fluid Hopper
@@ -48,7 +48,7 @@ upgcraft:container.fluidfurnace=Fluid Furnace
 upgcraft:container.fluidinfuser=Fluid Infuser
 upgcraft:container.enderhopper=Ender Hopper
 upgcraft:container.termofurnace=Termo Fluid Furnace
-upgcraft:container.activemaker=Active Maker
+upgcraft:container.activelavamaker=Active Lava Maker
 
 #NEI
 gui.nei.upgcraft:FluidInfuser=Fluid Infuser
