--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -68,4 +68,13 @@ achievement.upgcraft:get.slime.desc=Try to combine some Slime Balls with Wood Pl
 achievement.upgcraft:wooden.tank=A Basic Fluid Container
 achievement.upgcraft:wooden.tank.desc=It's better not to store hot fluids...
 achievement.upgcraft:fluid.infusion=Infusion Time!
-achievement.upgcraft:fluid.infusion.desc=Fluids are useful to craft new items and blocks
+achievement.upgcraft:fluid.infusion.desc=Mixing items with fluids it's better
+achievement.upgcraft:clay.ingot=New Build Material
+achievement.upgcraft:clay.ingot.desc=Now with clay you can do more things!
+achievement.upgcraft:clay.tank=A Better Fluid Tank!
+achievement.upgcraft:clay.tank.desc=A little hint: use hot fluid
+achievement.upgcraft:slime.obsidian=Resistant and Slimy
+achievement.upgcraft:slime.obsidian.desc=Run on it is fun!
+achievement.upgcraft:ender.tank=The End Strikes Again!
+achievement.upgcraft:ender.tank.desc=Space is relative
+
