--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -77,4 +77,10 @@ achievement.upgcraft:slime.obsidian=Resistant and Slimy
 achievement.upgcraft:slime.obsidian.desc=Run on it is fun!
 achievement.upgcraft:ender.tank=The End Strikes Again!
 achievement.upgcraft:ender.tank.desc=Space is relative
+achievement.upgcraft:active.lava=It Glows in the Dark!
+achievement.upgcraft:active.lava.desc=Something hot like the sun
+achievement.upgcraft:tank.mold=One Small Step!
+achievement.upgcraft:tank.mold.desc=Not only a nice block
+achievement.upgcraft:iron.tank=Shiny!
+achievement.upgcraft:iron.tank.desc=Will you be able to fill it?
 
