--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -2,7 +2,7 @@
 itemGroup.UpgradeCraft=UpgradeCraft
 
 # Blocks
-tile.upgcraft.slimylog.name=Slimy Wood Planks
+tile.upgcraft:slimylog.name=Slimy Wood Planks
 
 # Items
 
