Done fluid infuser

--- a/src/main/resources/assets/upgcraft/lang/en_US.lang
+++ b/src/main/resources/assets/upgcraft/lang/en_US.lang
@@ -6,6 +6,7 @@ tile.upgcraft:slimylog.name=Slimy Wood Planks
 tile.upgcraft:woodenfluidtank.name=Wooden Fluid Tank
 tile.upgcraft:basicfunnel.name=Basic Funnel
 tile.upgcraft:fluidfurnace.name=Fluid Furnace
+tile.upgcraft:fluidinfuser.name=Fluid Infuser
 
 # Items
 
